--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -29,15 +29,15 @@
             <h1>Contacto</h1>
             <div class="conteiner-contacto">
                 <div>
-                    <p class="parrafo-contacto">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31221.016530253506!2d-58.385671813507734!3d-34.66214955330217!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a3335230bd052b%3A0x9d632a18eea90a31!2sAvellaneda%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1697586340751!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <p class="mapa-contacto">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31221.016530253506!2d-58.385671813507734!3d-34.66214955330217!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a3335230bd052b%3A0x9d632a18eea90a31!2sAvellaneda%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1697586340751!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </p>
                 </div>
                 <div>
-                <h2>Donde encontrarnos</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                <h2>Escribinos</h2>
-                <p>materos@gmail.com</p>
+                    <h2>Donde encontrarnos</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <h2>Escribinos</h2>
+                    <p>materos@gmail.com</p>
                 </div>
             </div>
         </section>
