--- a/pages/crea.html
+++ b/pages/crea.html
@@ -31,21 +31,23 @@
         <section>
             <h1>Creá tu cuenta</h1>
         <form>
+            <div class="formulario">
             <div>
-                <label for="email">Ingrese su email</label>
+                <label for="email">Ingrese su email:</label>
                 <input type="email" id="email" placeholder="jose@gmail.com" required>
             </div>
             <div>
-                <label for="nombre">Ingrese su nombre</label>
+                <label for="nombre">Ingrese su nombre:</label>
                 <input type="text" id="nombre" placeholder="José Pérez" required>
             </div>
             <div>
-                <label for="password">Ingrese su contraseña</label>
+                <label for="password">Ingrese su contraseña:</label>
                 <input type="password" id="password" required>
             </div>
             <div>
-                <label>Confirme su contraseña</label>
+                <label>Confirme su contraseña:</label>
                 <input type="password">
+            </div>
             </div>
             <input type="submit">
         </form>
